# remoll

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Doxyfile  Geometry_Status_README.txt  README  README.Compiling.md  README.Contributing.md  README.Docker.md  README.FAQ.md  README.Running.md  README.Singularity.md  README.hitdet.md  README.initialize.md  README.md  README.optical  README.optical.md  README.pion  README.replay.md  README.variables.md  Singularity  Singularity.develop  Tracking_README  _config.yml  gdmlview.cc  generating_csv_files.C  initialize.sh  manual.txt  pe.cc  pullgitinfo.py  remoll.cc  remolldox.conf  reroot.cc  rootlogon.C  (+1 more)
.github/: ISSUE_TEMPLATE
analysis/: .gitignore  CMakeLists.txt  Coll1BottomdetAna.C  GenDetHist.h  Loop.C  README.md  anaConst.h  anaVacuum.C  basicAna.C  basicAna_carynbellows.C  beamLineDetHistos.h  beamLineHoleDetHistos.h  bkgAna.cc  c1ShldAna.C  caryn_bellows.C  caryn_bellows_match28.C  caryn_bellows_quickmatch.C  caryntxt2root.C  caryntxt2root_match28.C  caryntxt2root_quickmatch.C  compareAir.C  compareMD.C  compare_histos_in_two_files.C  count28_caryn_bellows.C  cut1plot2.C  deconvolution.C  det28Histos.h  detAna.cc  do_tracking_pe.sh  drawBeamLine.C  drawDeconv.C  drawZ0integ.C  dumpDonutEdeposit.C  eve_draw.C  file_carynbellows.txt  firstHit.C  flatHEdetHistos.h  flatHEdsDetHistos.h  flatHEholeDetHistos.h  flatHEusDetHistos.h  (+43 more)
analysis/bkgd_pe/: CMakeLists.txt  bkgd_pe.cc
analysis/bkgd_pe/include/: bkgd_pe.hh  bkgd_peLinkDef.h  bkgd_petypes.hh
analysis/copytree/: README.md  copytree_allbr.C  copytree_selectbr.C
analysis/externalGenerator/: README.md  remollDistAnalysis.C  remollGenFunctions.root  runRemoll.mac  runTF1.mac
analysis/hallRad/: CMakeLists.txt  hallRad.cc
analysis/hallRad/include/: hallRadtypes.hh
analysis/hallRad/src/: radDamage.cc
analysis/hepmc/: moller_vs_hepmc.C
analysis/hyperon/: hyperon_pion_rates.C
analysis/include/: pe.hh  peLinkDef.h  petypes.hh
analysis/issues/: issue167.C  issue172.C  issue248.C
analysis/mdQuartzRad/: mdRadiationDose.C  plotTID_md.C  skimTree.C  tidAnaMD.C
analysis/pe/: CMakeLists.txt  pe.cc
analysis/pe/include/: pe.hh  peLinkDef.h  petypes.hh  radDamage.hh
analysis/pe_studies/: README.md  active-SD-mollerParallel.gdml  cadp_moller.csv
analysis/pe_studies/macros/: detector_vis.mac  preserve_recreate-brad.mac  preserve_ref_scans.mac  preserve_scans.mac  runexample_epelastic_parallel.mac  runexample_epinelastic_parallel.mac  runexample_test-det28_parallel.mac
analysis/pe_studies/produce/out_moller_13/: remoll.sh
analysis/pe_studies/produce/out_moller_17/: runscript_17.sh.o1300363
analysis/pe_studies/produce/out_moller_32/: remoll
analysis/pe_studies/produce/out_moller_44/: runscript_44.sh
analysis/pe_studies/produce/out_moller_46/: macros  runexample_moller_parallel.mac
analysis/pe_studies/produce/out_moller_7/: geometry
analysis/pe_studies/ref-scans/R6/out_R6_15.0_degrees_88.5_L_93.5_D_0.7_ref_1_cer_1_scint/: cadp_R6_15.0_degrees_88.5_L_93.5_D_0.7_ref_1_cer_1_scint.csv  detector_R6.gdml  flat_segmented_detector_R6.gdml  materialsOptical.xml  matrices_R6.xml  mean.csv  mollerMother_R6.gdml  pe  ref_mean.csv  ref_res.csv  ref_rms.csv  remoll  res.csv  rms.csv  runscript_R6_15.0_degrees_88.5_L_93.5_D_0.7_ref_1_cer_1_scint.sh  scans_R6_15.0_degrees_88.5_L_93.5_D_0.7_ref_1_cer_1_scint.mac  solids_R6.xml
analysis/pe_studies/scripts/: do_all_rates.sh  full-scan.sh  generate-baseline-geometries.sh  getMax.C  produce.sh  ref-scan.sh  scan.sh  sub-ref-scan.sh
analysis/pion/: pionDetectorLucite.C  pionDetectorLucite_pe.C  pionDetectorLucite_surround.C  pion_detector_rates.ipynb  pion_rates_at_lucite_plane.C
analysis/pion/notebooks/: pion-bayes-optimization.ipynb
analysis/pionwall/moller_100mm/: electrons_thru_lead_analysis_rate_weighted.C  primary_electron_analysis.C
analysis/pionwall/pion_100mm/: pions_thru_lead_analysis_rate_weighted.C
analysis/pruneTreeEnvelope/: CMakeLists.txt  MakeEnvelopes.swp  README.md  pruneTreeEnvelope.cc  runexample_epelastic_envelope.mac  runexample_moller_envelope.mac  runexample_photon_envelope.mac
analysis/pruneTreeEnvelope/include/: pruneTreeEnvelopeLinkDef.h  pruneTreeEnvelopetypes.hh
analysis/rad_dose/: CMakeLists.txt  rad_dose.cc  rad_dose_OLD.cc
analysis/rad_dose/include/: rad_dosetypes.hh
analysis/raster/: plot_gen_beam_raster.C
analysis/reader/: CMakeLists.txt  envelope.sh  reader.cc
analysis/reader/include/: readertypes.hh
analysis/reader_manual/: CMakeLists.txt  envelope.sh  reader_manual.cc  reader_manual_TGraph2D.cc
analysis/reader_manual/include/: reader_manualtypes.hh
analysis/rootScripts/: Skyshine_rad_calc.C  plotConfigRatios.C  plotDetPlaneCuts.C  plotMultConfigRatios.C  reader_manual.cc
analysis/tests/: test_general.C  test_power.C
analysis/trigscint/: scint_pe.C  scint_wls_pe.C
cmake/: README.md
doc/: footer.html  remoll-features.md  remolldox.conf  stylesheet.css
docker/: docker-jlabce.patch  jlab.sh
generators/halld/bggen/code/: CMakeLists.txt  Makefile  SConscript  bg_CFglue.F  bg_ctrl.inc  bg_evec.inc  bg_hddm.c  bg_ini.F  bg_ntup_ini.F  bg_proc.inc  bggen.cc  bggen_F.F  bremsbeam_ini.F  cobrems.F  cohbeam_ini.F  gbrwign.F  gpxcosthr.F  gpxsecp.F  grndm.F  hbook_ini.F  lowen_eve.F  lowen_ini.F  omdeca2.F  omdeca3.F  omrots.F  orndpoly.F  parp_ini.F  pyr.F  pyth_ini.F  pythia_h.F  rnd_ini.F  rndm.F  saide.F  saidxseca.F  simpsf.F
generators/halld/bggen/code/include/: mconsp.inc  phiout.inc  py6int1.inc  py6pars.inc  py6strf.inc  radgenkeys.inc  tailcom.inc
geometry/: README.md  daughterGEM1.gdml  daughterGEM1a.gdml  daughterGEM1b.gdml  daughterGEM2.gdml  daughterGEM2a.gdml  daughterGEM2b.gdml  daughterGEM3.gdml  daughterGEM4.gdml  detectorDaughter.gdml  detectorDaughter_merged.gdml  detectorDaughter_noShlds.gdml  detector_5open.gdml  detector_cathode.gdml  detector_mainz.gdml  detector_parametrized.gdml  detector_r5.gdml  dumpDaughter.gdml  dumpDaughter_noShlds.gdml  genquartz.py  (+78 more)
(+1135 files in other folders)
